# route/v2/file.go
@@ -3,6 +3,7 @@ package v2
 import (
 	"net/http"
 
+	"github.com/IceWhaleTech/CasaOS/codegen"
 	"github.com/labstack/echo/v4"
 )
 
@@ -14,4 +15,12 @@ func (s *CasaOS) GetFileTest(ctx echo.Context) error {
 	http.ServeFile(ctx.Response().Writer, ctx.Request(), "/DATA/test.img")
 
 	return ctx.String(200, "pong")
+}
+
+func (c *CasaOS) CheckUploadChunk(ctx echo.Context, params codegen.CheckUploadChunkParams) error {
+	return c.fileUploadService.TestChunk(ctx)
+}
+
+func (c *CasaOS) PostUploadFile(ctx echo.Context) error {
+	return c.fileUploadService.UploadFile(ctx)
 }
